USD importer does not add the imported objects in the collection #114047

Closed
opened 2023-10-23 06:00:20 +02:00 by kursad k · 0 comments
Member

System Information
Operating system: Win11

Blender Version
Broken: 19b112b11c
Broken: since 3.4
Worked: 3.3 LTS

Short description of error
The importer has an option to create the collection during import but it is not functioning as intended.

Rocky_Desert_-_Terrain.zip

Exact steps for others to reproduce the error
file->import usd->import the attached USD
in the settings, check "Create Collection:"
import
the USD is imported but it is not put in the collection.

**System Information** Operating system: Win11 **Blender Version** Broken: 19b112b11c79 Broken: since 3.4 Worked: 3.3 LTS **Short description of error** The importer has an option to create the collection during import but it is not functioning as intended. [Rocky_Desert_-_Terrain.zip](/attachments/ce61be30-4181-453e-99c8-01360c28efdf) **Exact steps for others to reproduce the error** file->import usd->import the attached USD in the settings, check "Create Collection:" import the USD is imported but it is not put in the collection.
kursad k added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-10-23 06:00:21 +02:00
Jesse Yurkovich added
Module
Pipeline, Assets & IO
Status
Confirmed
Interest
USD
and removed
Status
Needs Triage
labels 2023-10-23 06:57:11 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-09 20:08:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114047
No description provided.